human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_42.wast
(assert_malformed
  (module quote "(func loop $a end $l)")
  "mismatching label"
)